# latest

./: README-ja_JP.md  README.md  pyproject.toml
src/latest/: __about__.py  __init__.py  file_types.py  latest.py
