[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latest"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls = {Homepage = "https://github.com/tos-kamiya/latest"}
dependencies = [
  "python-magic",
]

[tool.hatch.version]
path = "src/latest/__about__.py"

[project.scripts]
latest = "latest:main"
